added database to load camera recordings, that got the images using coil also added settings page which uses datastore to save users preferences for voice changer and microphone